--- a/demo/package.json
+++ b/demo/package.json
@@ -1,6 +1,9 @@
 {
   "nativescript": {
-    "id": "org.nativescript.demo"
+    "id": "org.nativescript.demo",
+    "tns-android": {
+      "version": "4.1.3"
+    }
   },
   "dependencies": {
     "nativescript-theme-core": "^1.0.4",
@@ -9,10 +12,14 @@
     "tns-core-modules": "^4.2.0"
   },
   "devDependencies": {
+    "babel-traverse": "6.26.0",
+    "babel-types": "6.26.0",
+    "babylon": "6.18.0",
     "jasmine-core": "^2.5.2",
     "karma": "^1.3.0",
     "karma-jasmine": "^1.0.2",
     "karma-nativescript-launcher": "^0.4.0",
+    "lazy": "1.0.11",
     "nativescript-css-loader": "~0.26.1",
     "nativescript-dev-typescript": "~0.7.2",
     "nativescript-dev-webpack": "~0.15.1",
