--- a/src/package.json
+++ b/src/package.json
@@ -20,7 +20,8 @@
         "tslint": "cd .. && tslint \"**/*.ts\" --config tslint.json --exclude \"**/node_modules/**\"",
         "plugin.tscwatch": "npm run tsc -- -w",
         "demo.ios": "npm i && npm run tsc && cd ../demo && tns run ios --syncAllFiles",
-        "demo.android": "npm i && npm run tsc && cd ../demo && tns run android --syncAllFiles",
+        "demo.android": "npm i && npm run tsc && cd ../demo && tns debug android --syncAllFiles",
+        "demo.android.emulator": "npm i && npm run tsc && cd ../demo && tns debug android --syncAllFiles --emulator",
         "demo.reset": "cd ../demo && rimraf platforms",
         "plugin.prepare": "npm run build && cd ../demo && tns plugin remove nativescript-webrtc && tns plugin add ../src",
         "clean": "cd ../demo && rimraf hooks node_modules platforms && cd ../src && rimraf node_modules",
