--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -1,11 +1,19 @@
 /* Include.gradle configuration: http://docs.nativescript.org/plugins/plugins#includegradle-specification */
 
 android {
-	
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
 }
 
 dependencies {
     // Describe plugin native Android dependencies like
 	// compile "groupName:pluginName:ver" 
     // EXAMPLE: compile "com.facebook.fresco:fresco:0.9.0+"
+    implementation "org.webrtc:google-webrtc:1.0.+"
+    //compile 'io.pristine:libjingle:9694@aar'
+    //compile files('libs/libjingle_peerconnection.jar')
+    //compile 'com.facebook.react:react-native:+'
+    //compile fileTree(dir: 'libs', include: ['*.jar'])
 }
