--- a/src/platforms/android/include.gradle
+++ b/src/platforms/android/include.gradle
@@ -11,7 +11,8 @@ dependencies {
     // Describe plugin native Android dependencies like
 	// compile "groupName:pluginName:ver" 
     // EXAMPLE: compile "com.facebook.fresco:fresco:0.9.0+"
-    implementation "org.webrtc:google-webrtc:1.0.+"
+    //implementation "org.webrtc:google-webrtc:1.0.+"
+    implementation "org.webrtc:google-webrtc:1.0.24180"
     //compile 'io.pristine:libjingle:9694@aar'
     //compile files('libs/libjingle_peerconnection.jar')
     //compile 'com.facebook.react:react-native:+'
